@@ -4,52 +4,52 @@ class ValidationTest < Test::Unit::TestCase
   def test_should_invalidate_big_files
     @attachment = SmallAttachment.new
     assert !@attachment.valid?
-    assert @attachment.errors.on(:size)
+    assert @attachment.errors[:size]
     
     @attachment.size = 2000
     assert !@attachment.valid?
-    assert @attachment.errors.on(:size), @attachment.errors.full_messages.to_sentence
+    assert @attachment.errors[:size], @attachment.errors.full_messages.to_sentence
     
     @attachment.size = 1000
     assert !@attachment.valid?
-    assert_nil @attachment.errors.on(:size)
+    assert_nil @attachment.errors[:size]
   end
 
   def test_should_invalidate_small_files
     @attachment = BigAttachment.new
     assert !@attachment.valid?
-    assert @attachment.errors.on(:size)
+    assert @attachment.errors[:size]
     
     @attachment.size = 2000
     assert !@attachment.valid?
-    assert @attachment.errors.on(:size), @attachment.errors.full_messages.to_sentence
+    assert @attachment.errors[:size], @attachment.errors.full_messages.to_sentence
     
     @attachment.size = 1.megabyte
     assert !@attachment.valid?
-    assert_nil @attachment.errors.on(:size)
+    assert_nil @attachment.errors[:size]
   end
   
   def test_should_validate_content_type
     @attachment = PdfAttachment.new
     assert !@attachment.valid?
-    assert @attachment.errors.on(:content_type)
+    assert @attachment.errors[:content_type]
 
     @attachment.content_type = 'foo'
     assert !@attachment.valid?
-    assert @attachment.errors.on(:content_type)
+    assert @attachment.errors[:content_type]
 
     @attachment.content_type = 'pdf'
     assert !@attachment.valid?
-    assert_nil @attachment.errors.on(:content_type)
+    assert_nil @attachment.errors[:content_type]
   end
 
   def test_should_require_filename
     @attachment = Attachment.new
     assert !@attachment.valid?
-    assert @attachment.errors.on(:filename)
+    assert @attachment.errors[:filename]
     
     @attachment.filename = 'foo'
     assert !@attachment.valid?
-    assert_nil @attachment.errors.on(:filename)
+    assert_nil @attachment.errors[:filename]
   end
 end
